[package]
name = "another-ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
futures = "0.3.30"
config = "0.14.0"
scylla = { version = "0.14.0", features = ["chrono-04"] }
time = "0.3.36"
charybdis = "0.7.7"
chrono = "0.4.38"
anyhow = "1.0.89"
